Changelog
=========

1.0b4 (unreleased)
------------------

- add new classifiers


1.0b3 (2011-08-01)
------------------

- Optimization of storage: defaults are now based on all provider except zope.app.annotation
  [toutpt]
- fix case where site.plone.app.registry are not set (value was set to None)
  [toutpt]

1.0b2 (2011-06-30)
------------------

- Fix config form (http://stackoverflow.com/q/6524304/622081)


1.0b1 (2011-06-08)
------------------

- Initial release