@@ -10,6 +10,10 @@ class ZopeAnnotation(provider.ZopeAnnotation):
     """Mutator based on annotation"""
     interface.implements(interfaces.IConfigurationMutator)
 
+    def __init__(self, view):
+        super(ZopeAnnotation,self).__init__(view)
+        self._provider = None
+
     def set(self, configuration):
         """see ISettingsStorage. This implementation take care to save only
         non default values. If other values are found they will be deleted"""
@@ -32,12 +36,16 @@ class ZopeAnnotation(provider.ZopeAnnotation):
 
     def get_defaults(self):
         """This method return defaults values for the current view"""
-        provider = interfaces.IConfigurationProvider(self.view)
+        provider = self.get_provider()
         #we are storing in annotation, so we want value outside of this provider
-        if 'zope.app.annotation' in provider.pnames:
+        if 'context.zope.annotation' in provider.pnames:
             pnames = list(provider.pnames)
             pnames.remove('context.zope.annotation')
             provider.pnames = pnames
 
         return provider.get()
 
+    def get_provider(self):
+        if self._provider is None:
+            self._provider = interfaces.IConfigurationProvider(self.view)
+        return self._provider
